<resources>
    <string name="app_name">Nirvana Eatery</string>
    <string name="get_started">Get Started</string>
    <string name="continue_login">Continue</string>

    <string name="T_Cs"><![CDATA[By signing up, you would have accepted our Terms & Condition and Privacy policy]]></string>
    <string name="mobile_number">Enter Mobile Number</string>

    <string name="didn_t_receive_otp">Didn\'t receive OTP ?</string>
    <string name="enter_the_otp_4_digit_code_sent_to_your_number">Enter the OTP 4-digit code sent to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>

    <string name="text_completeSignUp">Complete signing up by entering your account details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="done">Done</string>
    <string name="e_mail">e-mail</string>

    <string name="NirvanaEatery">Nirvana Eatery</string>
    <string name="Timelimittxt">Opening Hours</string>
    <string name="Workinghrs">8:00AM-10:00PM</string>
    <string name="SearchFood">Search Food</string>
    <string name="Categoriestxt">Categories</string>
    <string name="Populartxt">Popular</string>
    <string name="SeeMoretxt">See More</string>
    <string name="ProfileBtntxt">Account</string>
    <string name="TrackOrderBtntxt">Track</string>

    <string name="CategoryName">Heavy Meals</string>

    <string name="sub_totalTxt">Sub Total</string>
    <string name="deliveryTxt">Delivery Fee</string>
    <string name="taxTxt">Service Fee</string>
    <string name="totalTxt">TOTAL</string>
    <string name="place_orderTxt">Place Order</string>
    <string name="my_cart">My \nOrder</string>
    <string name="subTotalFeeTxt">KES  0.00</string>
    <string name="DeliveryFeeTxt">KES  0.00</string>
    <string name="taxFeeTxt">KES  0.00</string>
    <string name="TotalFeeTxt">KES  0.00</string>
    <string name="emptyTxt">Your Cart is Empty</string>
    <string name="CartName">CartName</string>
    <string name="EachItemFee">KES 0</string>
    <string name="EachItemTotal">KES 0</string>
    <string name="numberItemTxt">1 X</string>
    <string name="Detail_price">KES 0</string>
    <string name="prep_minutesTxt">35min</string>

    <string name="ProfileName">Shawn Richards</string>

    <string name="foodlist_update">More food will be added in this meal in due time, stay with us for offers will also be available. Thank You for shopping with Nirvana</string>
    <string name="CountryCode">+254</string>
    <string name="lastname">Last name</string>
    <string name="mail">E-mail</string>
    <string name="firstname">First name</string>
    <string name="phoneno">Phone Number</string>

    <string name="track_orderTitle">Track Order</string>
    <string name="order_date">Tue, 20 Sep</string>
    <string name="order_total_amount">Amt:</string>
    <string name="order_id_xxx_xxx_xxx">Order ID: </string>
    <string name="order_ammount">0.00</string>
    <string name="eta">Cooking Time: 0 Min</string>
    <string name="view_meal_reciept">View Meal Reciept</string>
    <string name="order_placedTxt">Order Processed</string>
    <string name="order_placed_info">We have recieved your order</string>
    <string name="Pickup_ready_info">Order ID : xxx-xxx-xxx form Nirvana Eatery is ready for pick up.</string>
    <string name="processed_order_info">Be patient. Your Order is being prepared.</string>
    <string name="payment_confirmed_info">Pay to Till No: 5418891 \nAdd transaction code to confirm payment </string>
    <string name="order_processedTxt">Order Placed</string>
    <string name="payment_confirmationTxt">Payment Confirmation</string>
    <string name="ready_to_pickupTxt">Ready to Pickup</string>
    <string name="ETA"></string>


</resources>