<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activity.Complete_SigningUp">

    <TextView
        android:id="@+id/text_completeSignUp"
        android:layout_width="386dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_completeSignUp"
        android:textAlignment="center"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_completeSignUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/grey_square_card"
                android:fontFamily="@font/be_vietnam"
                android:hint="@string/first_name"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textAlignment="gravity"
                android:textColor="@android:color/tertiary_text_dark"
                android:textColorHint="#757575"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/grey_square_card"
                android:fontFamily="@font/be_vietnam"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textAlignment="gravity"
                android:textColor="@android:color/tertiary_text_dark"
                android:textColorHint="#757575"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/PhoneNo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/dark_grey_square_card"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/be_vietnam"
                android:hint="@string/phoneno"
                android:includeFontPadding="false"
                android:inputType="phone"
                android:textColor="#5C070707"
                android:textColorHint="#757575"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/Text_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="@drawable/grey_square_card"
                android:fontFamily="@font/be_vietnam"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textAlignment="gravity"
                android:textColor="@android:color/tertiary_text_dark"
                android:textColorHint="#757575"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/Done"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>